# pgloglens

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  setup.py
pgloglens/: __init__.py  analyzer.py  cli.py  compare.py  llm.py  models.py  parser.py  pgss.py  prefix.py  rca.py  reporter.py  rules.py  timeline.py  utils.py
scripts/: run_docker_tests.sh
tests/: __init__.py  conftest.py  test_analyzer.py  test_compare.py  test_integration.py  test_parser.py  test_pgss.py  test_prefix.py  test_rules.py  test_timeline.py
tests/docker/: generate_logs.py
tests/docker/pg-init/: 01-setup.sql
